2005-12-31  Roger Leigh  <rleigh@debian.org>

	* Change all instances of "const T&" to "T const&" for
	consistency.

2005-12-30  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot-lvm-snapshot.cc (setup_session_info):
	Imbue ostream with "C" locale.

	* schroot/sbuild-config.cc (load): Imbue istream with "C" locale.

	* schroot/sbuild-keyfile.cc (keyfile): Imbue ifstream with "C"
	locale.

	* schroot/sbuild-chroot.h (setup_env_var): Imbue stringstream with
	"C" locale.

	* schroot/sbuild-keyfile.h: All stringstreams are imbued with the
	"C" locale for locale-independent formatting.

	* schroot/schroot-releaselock.cc (main): Use C++ locale setup.

	* schroot/schroot.cc (main): Use C++ locale setup.

2005-12-30  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): Use actions rather than old bool
	values.  Compute the session operation using the action type.
	Surround the entire function in a try/catch block, so that
	exceptions thrown during program execution are reported nicely.

	* schroot/schroot-options.cc
	(set_action): Only allow one action to be specified.
	(Options): Set the appropriate actions when parsing.  Session
	operations are represented within the action member.

	* schroot/schroot-options.h (schroot): Add action_type enum.  This
	is used to represent all actions the user may specify, rather than
	using a separate bool for each.  Remove the session operation
	member.

2005-12-30  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.h: Fix include guard naming scheme.

	* schroot/schroot-releaselock-options.(cc|h): New class for
	schroot-releaselock options parsing.  The options structure has
	been split out from schroot-releaselock.cc to create this new
	class.

2005-12-30  Roger Leigh  <rleigh@debian.org>

	* Replace all format_detail_* typedef usage with format_details.

	* schroot/sbuild-chroot.h (format_details): Templated member
	function to construct the correct format_details class template.