@@ -26,7 +26,8 @@ localedir = $(datadir)/locale
 pkglibexecdir = $(SCHROOT_LIBEXEC_DIR)
 
 AM_CFLAGS = -std=c99 $(SCHROOT_CFLAGS)
-AM_CXXFLAGS = $(SCHROOT_CFLAGS) -Wall -Wcast-align -Wwrite-strings -pedantic -Wcast-qual -Wredundant-decls
+AM_CXXFLAGS = $(SCHROOT_CFLAGS) -pedantic -Wall -Wcast-align -Wextra -Wwrite-strings -Wswitch-default -Wcast-qual -Wunused-variable -Wredundant-decls -Wctor-dtor-privacy -Wnon-virtual-dtor -Wreorder -Wold-style-cast -Woverloaded-virtual -fstrict-aliasing
+#  -Weffc++ causes too many warnings in standard headers.
 
 DEFS = -DG_LOG_DOMAIN=\"Schroot\" -DGETTEXT_PACKAGE=\"schroot\" -DLOCALEDIR=\"$(localedir)\" -D_GNU_SOURCE
 
